fix category getting cut off on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -51,7 +51,7 @@ img {
 
 .story-content ul,
 .story-content ol {
-  @apply ml-2;
+  @apply ml-4;
 }
 
 .story-content ol {
